fixed download button stretching

--- a/Website/styles/default.css
+++ b/Website/styles/default.css
@@ -52,9 +52,6 @@ html, body{
 }
 
 .nav-button {
-    display: flex;
-    align-items: center;
-
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
